changes suggested by pramod sir

--- a/index.html
+++ b/index.html
@@ -18,35 +18,20 @@
       <!-- -----Menu Design----- -->
       <header class="header">
         <div class="menu-container">
-          <h1 class="logo">
+          <h2 class="logo">
             The Green <br />
             Trees Initiative
-          </h1>
+          </h2>
           <div class="menu">
-            <p class="header-items">About us</p>
-            <p class="header-items">Our Stories</p>
-            <p class="header-items">News and events</p>
+            <p class="menu-items">About us</p>
+            <p class="menu-items">Our Stories</p>
+            <p class="menu-items">News and events</p>
           </div>
         </div>
-        <a class="donate-btn" href="">Donate Today</a>
+        <div>
+          <div class="donate-btn">Donate Today</div>
+        </div>
       </header>
     </div>
-    <main>
-      <div class="container">
-        <div class="content">
-          <div class="climate-box1">
-            <div><h2>THE ISSUE</h2></div>
-            <p>
-              Climate change poses the biggest threat to women in developing
-              nations.
-            </p>
-            <h6>Read more about this environment and social cause</h6>
-          </div>
-          <div class="climate-box2">
-            <img src="stopclimatechange.png" />
-          </div>
-        </div>
-      </div>
-    </main>
   </body>
 </html>
