--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greenery | The Green Trees Initiative</title>
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="https://use.typekit.net/fhs4zwg.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div class="container">
